--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,5 @@ jobs:
       run: pytest
 
     - name: Deployment
-      run: echo "Deploying..."
+      run: echo "Deploying..."; echo "done."
           
